[package]
name = "rydes-api"
version = "0.1.0"
authors = ["Ibrahim Alhamad <hi@ialhamad.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "1.17.3"
tide = "0.13.0"
sqlx = { version = "0.3.5", features = ["runtime-async-std", "macros", "chrono", "json", "postgres", "uuid"] }
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
chrono = "0.4.13"
log = "0.4.11"
uuid = "0.8.1"
async-std = {version = "1.6.2", features = ["attributes"] }
anyhow = "1.0.32"
async-graphql-tide = "1.17.9"
rust-argon2 = "0.8.2"
driftwood = "0.0.3"
async-sqlx-session = { version = "0.2.0", features = ["pg"] }
async-session = "2.0.1"
